syntax = "proto3";
package tal.v1;
message RawProfileListRequest {
  string query = 1;                      
  repeated float embedding = 2;          
  repeated string industries = 3;        
  repeated string locations = 4;         
  repeated string skills = 5;            
  repeated string companies = 6;         
  repeated string projects = 7;          
  int32 sourcing_session_id = 9;                       
  int32 years_of_experience_from = 10;                       
  int32 years_of_experience_to = 12;                       
  int32 limit = 8;                       
}

message RawProfileListRow {
  int64 person_id = 1;
  string name = 2;
  string headline = 3;
  string location = 4;
  string current_title = 5;
  string current_company = 6;
  string industry = 7;
  string summary = 8;
  string years_of_experience = 9;
  int32 num_of_connections = 10;
  string profile_picture_url = 11;
  string linkedin_profile_url = 12;
  repeated string skills = 13;
  float semantic_score = 14;
  float text_rank = 15;
  float hybrid_score = 16;
}
message RawProfileListResponse {
  int64 person_id = 1;
  string name = 2;
  string headline = 3;
  string location = 4;
  string current_title = 5;
  string current_company = 6;
  string industry = 7;
  string summary = 8;
  string years_of_experience = 9;
  int32 num_of_connections = 10;
  string profile_picture_url = 11;
  string linkedin_profile_url = 12;
  repeated string skills = 13;
  float semantic_score = 14;
  float text_rank = 15;
  float hybrid_score = 16;
}



message RawProfileFindRequest {
 int32 person_id = 1;
}
// ========================
// Employment
// ========================
message Employment {
  string name = 1;
  string linkedin_id = 2;
  int64 company_id = 3;
  string company_linkedin_profile_url = 4;
  string company_website_domain = 5;
  string position_id = 6;
  string title = 7;
  string description = 8;
  string location = 9;
  string start_date = 10;
  string end_date = 11;
  bool employer_is_default = 12;
  bool business_email_verified = 13;
  string company_headquarters_country = 14;
  string company_hq_location = 15;
  repeated string company_hq_location_address_components = 16;
  string company_headcount_range = 17;
  int32 company_headcount_latest = 18;
  repeated string company_industries = 19;
  string company_type = 20;
  string seniority_level = 21;
  string function_category = 22;
  string years_at_company = 23;
  int32 years_at_company_raw = 24;
}

// ========================
// Education
// ========================
message Education {
  string degree_name = 1;
  string institute_name = 2;
  string institute_linkedin_id = 3;
  string institute_linkedin_url = 4;
  string institute_logo_url = 5;
  string field_of_study = 6;
  string activities_and_societies = 7;
  string start_date = 8;
  string end_date = 9;
}

// ========================
// Honor
// ========================
message Honor {
  string title = 1;
  string issued_date = 2;
  string description = 3;
  string issuer = 4;
  repeated string media_urls = 5;
  string associated_organization_linkedin_id = 6;
  string associated_organization = 7;
}

// ========================
// Certification
// ========================
message Certification {
  string name = 1;
  string issued_date = 2;
  string expiration_date = 3;
  string url = 4;
  string issuer_organization = 5;
  string issuer_organization_linkedin_id = 6;
  string certification_id = 7;
}
message RawProfileFindResponse {
 int64 person_id = 1;
  string name = 2;
  string first_name = 3;
  string last_name = 4;
  string region = 5;
  repeated string region_address_components = 6;
  string headline = 7;
  string summary = 8;
  repeated string skills = 9;
  repeated string languages = 10;
  string profile_language = 11;
  repeated string emails = 12;
  string twitter_handle = 13;
  repeated bool open_to_cards = 14;
  int32 num_of_connections = 15;
  bool recently_changed_jobs = 16;
  string years_of_experience = 17;
  int32 years_of_experience_raw = 18;

  repeated Employment current_employers = 19;
  repeated Employment past_employers = 20;
  repeated Education education_background = 21;
  repeated Honor honors = 22;
  repeated Certification certifications = 23;
}


message RawProfileListRequestBuildRequest {
  string text = 1;
  map<string, string> structured_text = 2;
  repeated FileConfig files = 3; // reuse your FileConfig type
  string model = 4;
}

// Response wrapping the structured output
message RawProfileListRequestBuildResponse {
  RawProfileListRequest structured_response = 1;
}

// Example of FileConfig if needed in proto
message FileConfig {
  string path = 1;       // could be local or remote file
  bytes contents = 2;    // could be passed directly
  string name = 3;
  string mime_type = 4;
  map<string, string> metadata = 5;
}
